Add profile img

--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>PORTFOLIO</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Hei Im MD. SOLIMULLAH</h1>
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1> <span class="orange-color">Solimullah</span> World</h1>
+            <h3>PROFESSIONAL OBJECTIVE</h3>
+            <p>Looking for a challenging career with an opportunity for the development, enhancement and gradual
+                assumption
+                of greater responsibility by means of knowledge, intuition and experience, as well as in pursue of a
+                creative environment where I shall be able to apply my skills and potentiality.</p>
+        </div>
+
+        <div class="right-side">
+            <img src="images/my-bg.png" alt="Profile image">
+        </div>
+    </section>
+
 </body>
+
 </html>
