--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 assumption
                 of greater responsibility by means of knowledge, intuition and experience, as well as in pursue of a
                 creative environment where I shall be able to apply my skills and potentiality.</p>
+            <a target="_blank" href="https://www.linkedin.com/in/s071m/">HIRE ME</a>
         </div>
 
-        <div class="right-side">
+        <div class="half-width">
             <img src="images/my-bg.png" alt="Profile image">
         </div>
     </section>
