Top banner added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="orange-color">Solimullah</span> World</h1>
@@ -22,7 +22,7 @@
                 assumption
                 of greater responsibility by means of knowledge, intuition and experience, as well as in pursue of a
                 creative environment where I shall be able to apply my skills and potentiality.</p>
-            <a target="_blank" href="https://www.linkedin.com/in/s071m/">HIRE ME</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/s071m/">HIRE ME</a>
         </div>
 
         <div class="half-width">
