--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         </div>
     </section>
 
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>ABOUT ME</h1>
+            <p>Hi, this is Developer MD. SOLIMULLAH A Professional Web Developer and WordPress Specialist including
+                eCommerce development. I am a full-time web designer. I am skilled in HTML, CSS, Bootstrap5, WordPress
+                Theme customization.</p>
+            <a class="link-button" target="_balnk" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
