--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="orange-color">Solimullah</span> World</h1>
@@ -30,7 +30,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -40,6 +40,35 @@
                 eCommerce development. I am a full-time web designer. I am skilled in HTML, CSS, Bootstrap5, WordPress
                 Theme customization.</p>
             <a class="link-button" target="_balnk" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
+    <section class="exprience-area">
+        <h1>EXPRIENCE</h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Full Strack Web Developer</h1>
+                <h3>2016-Present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In rerum nisi molestiae quo architecto,
+                    voluptates illum corporis neque animi quos harum laudantium repellat dignissimos placeat autem
+                    consectetur quam magnam ducimus atque dolore, omnis, quae iusto porro! Repellat possimus accusantium
+                    dolorem veritatis, error amet voluptas adipisci a blanditiis quod saepe maiores explicabo, rerum
+                    esse eius debitis necessitatibus molestias quia dolore. Quisquam similique sit sapiente, non
+                    suscipit placeat saepe maxime mollitia veniam.</p>
+            </div>
+            <div class="half-width">
+                <h1>Full Strack Web Developer</h1>
+                <h3>2010-2014 | Learner Level Developer</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In rerum nisi molestiae quo architecto,
+                    voluptates illum corporis neque animi quos harum laudantium repellat dignissimos placeat autem
+                    consectetur quam magnam ducimus atque dolore, omnis, quae iusto porro! Repellat possimus accusantium
+                    dolorem veritatis, error amet voluptas adipisci a blanditiis quod saepe maiores explicabo, rerum
+                    esse
+                    eius debitis necessitatibus molestias quia dolore. Quisquam similique sit sapiente, non suscipit
+                    placeat
+                    saepe maxime mollitia veniam.</p>
+
+            </div>
         </div>
     </section>
 
