--- a/index.html
+++ b/index.html
@@ -46,31 +46,27 @@
     <section class="exprience-area">
         <h1>EXPRIENCE</h1>
         <div class="flexible-container">
-            <div class="half-width">
-                <h1>Full Strack Web Developer</h1>
-                <h3>2016-Present | Pro Level Developer</h3>
+            <div id="exp-level" class="exprience-item">
+                <h2>Full Strack Web Developer</h2>
+                <h3 class="orange-color">2016-Present | Pro Level Developer</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In rerum nisi molestiae quo architecto,
                     voluptates illum corporis neque animi quos harum laudantium repellat dignissimos placeat autem
-                    consectetur quam magnam ducimus atque dolore, omnis, quae iusto porro! Repellat possimus accusantium
-                    dolorem veritatis, error amet voluptas adipisci a blanditiis quod saepe maiores explicabo, rerum
-                    esse eius debitis necessitatibus molestias quia dolore. Quisquam similique sit sapiente, non
-                    suscipit placeat saepe maxime mollitia veniam.</p>
+                    consectetur quam magnam ducimus atque dolore, omnis, quae iusto porro!</p>
             </div>
-            <div class="half-width">
-                <h1>Full Strack Web Developer</h1>
-                <h3>2010-2014 | Learner Level Developer</h3>
+            <div id="learn-level" class="exprience-item">
+                <h2>Full Strack Web Developer</h2>
+                <h3 class="orange-color">2010-2014 | Learner Level Developer</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In rerum nisi molestiae quo architecto,
                     voluptates illum corporis neque animi quos harum laudantium repellat dignissimos placeat autem
-                    consectetur quam magnam ducimus atque dolore, omnis, quae iusto porro! Repellat possimus accusantium
-                    dolorem veritatis, error amet voluptas adipisci a blanditiis quod saepe maiores explicabo, rerum
-                    esse
-                    eius debitis necessitatibus molestias quia dolore. Quisquam similique sit sapiente, non suscipit
-                    placeat
-                    saepe maxime mollitia veniam.</p>
+                    consectetur quam magnam ducimus atque dolore, omnis, quae iusto porro!</p>
 
             </div>
         </div>
     </section>
+    <footer>
+        <p>&copy; Copyright 2022 Solimullah
+            All rights reserved.</p>
+    </footer>
 
 </body>
 
